# api/swagger/swagger.yaml
@@ -182,6 +182,54 @@ paths:
             if `exact` or `exact_full` is `true`
           schema:
             $ref: '#/definitions/error_message'
+  '/members/byCongress/{congress}':
+    get:
+      summary: List members by congress
+      operationId: getMembersByCongress
+      tags:
+        - congress
+        - members
+      parameters:
+        - in: path
+          name: congress
+          description: retrieve members by congress
+          required: true
+          type: string
+      responses:
+        200:
+          description: successful operation, return with 0+ members
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/member'
+        404:
+          description: cannot find a congress
+          schema:
+            $ref: '#/definitions/error_message'
+  '/congress/{congress}/members':
+    get:
+      summary: List members by congress
+      operationId: getCongressMembers
+      tags:
+        - congress
+        - members
+      parameters:
+        - in: path
+          name: congress
+          description: retrieve a congresses' members
+          required: true
+          type: string
+      responses:
+        200:
+          description: successful operation, return with 0+ members
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/member'
+        404:
+          description: cannot find a congress
+          schema:
+            $ref: '#/definitions/error_message'
 definitions:
   welcome:
     type: object
@@ -222,7 +270,6 @@ definitions:
         type: object
         required:
           - bioguide_id
-          - thomas_id
           - govtrack_id
         properties:
           bioguide_id:
@@ -239,10 +286,18 @@ definitions:
           - first-name
           - last-name
         properties:
-          first-name:
+          first_name:
             type: string
-          last-name:
+          last_name:
             type: string
+      party:
+        type: string
+      state:
+        type: string
+      type:
+        type: string
+      district:
+        type: integer
   bioguide_id:
     type: string
     description:
